<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    >


    <CheckBox
        android:text="@string/red_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
      />
    <CheckBox
        android:text="@string/green_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <CheckBox
        android:text="@string/blue_background_color"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/button"
        android:background="@color/ButtonColor"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:textStyle="bold"/>




</RelativeLayout>